# pysandboxie

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py
sandboxie/: __init__.py  sandbox_stub_redirector.py  sandboxie.py  win32namedpipe.py
tests/: test_sandboxie.py  test_win32namedpipe.py
